[package]
name = "arduboy_toolset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
serialport = "4.2.1"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.6"
onestop = { version="0.0.2", features = [ "utils" ] }
anyhow = "1.0.72"
log = "0.4.19"
simple_logger = "4.2.0"